# laugh-tale

./: CHANGELOG.md  README.md  pyproject.toml  server.json
src/laugh_tale/: __init__.py  server.py
tests/: test_laugh_tale.py
